--- a/css/first.css
+++ b/css/first.css
@@ -40,6 +40,7 @@ body{
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 
@@ -73,6 +74,13 @@ body{
 
 /* -----------------------my profile photo *-----------------------*/
 
+.aboutme{
+  margin-top: 10px;
+  background-color: antiquewhite;
+  height: 856px;
+  width: 100%;
+  
+}
 .myprofile{
   height: 856px;
   width: 867px;
@@ -86,13 +94,7 @@ body{
 
 }
 
-.aboutme{
-  margin-top: 10px;
-  background-color: antiquewhite;
-  height: 856px;
-  width: 100%;
-  
-}
+
 
 .meText{
   color: black;
