--- a/css/first.css
+++ b/css/first.css
@@ -46,9 +46,9 @@ body{
 
 /*--------------------intro page------------------*/
 .intro_page p{
-  color:#20C20E;
+  color:lavender;
   font-size: 4em;
-  font-family: Franklin Gothic Medium;
+  font-family: ;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -104,6 +104,18 @@ body{
   right: 40%;
   margin: 0 auto;
 
+}
+
+.myinfo{
+  font-size: 1.4em;
+  font-family: Franklin Gothic Medium;
+  position: absolute;
+  right: 10%;
+  margin: 0 auto;
+  padding-top: 10%;
+  text-align: justify;
+  width:40%
+  
 }
 
 
