--- a/css/first.css
+++ b/css/first.css
@@ -48,7 +48,7 @@ body{
 .intro_page p{
   color:lavender;
   font-size: 4em;
-  font-family: ;
+  font-family:'Merriweather', serif;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -77,26 +77,23 @@ body{
 .aboutme{
   margin-top: 10px;
   background-color: antiquewhite;
-  height: 856px;
+  height: 1000px;
   width: 100%;
   
 }
-.myprofile{
-  height: 856px;
-  width: 867px;
-  position: absolute;
-}
 
 .photo{
-  height: 856px;
-  width: 867px;
-  position: absolute;
+  height: auto;
+  width: 45.5%;
+  
+  float: left;
+  
 
 }
 
 
 
-.meText{
+.whoiswala{
   color: black;
   font-size: 4em;
   font-family: Franklin Gothic Medium;
@@ -106,15 +103,18 @@ body{
 
 }
 
-.myinfo{
+.myinfo p{
+  background-color: antiquewhite;
   font-size: 1.4em;
   font-family: Franklin Gothic Medium;
-  position: absolute;
-  right: 10%;
-  margin: 0 auto;
+  float: left;
+  
   padding-top: 10%;
+  margin:0 auto;
   text-align: justify;
+
   width:40%
+  
   
 }
 
@@ -123,5 +123,3 @@ body{
   margin: 0%;
   
 }
-
-
