--- a/css/first.css
+++ b/css/first.css
@@ -24,7 +24,7 @@ h1 {
 */
 body{
   margin: 0%;
-
+  
 }
 
 
@@ -32,9 +32,11 @@ body{
 
 /* ---- particles.js container ---- */
 
+
+
 #particles-js{
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: darkcyan;
   background-image: url('');
   background-size: cover;
@@ -77,7 +79,7 @@ body{
 .aboutme{
   margin-top: 10px;
   background-color: antiquewhite;
-  height: 1000px;
+  height: 856px;
   width: 100%;
   
 }
@@ -85,21 +87,19 @@ body{
 .photo{
   height: auto;
   width: 45.5%;
-  
   float: left;
-  
-
 }
 
 
 
-.whoiswala{
+.whoiswala p{
   color: black;
-  font-size: 4em;
+  font-size: 5em;
   font-family: Franklin Gothic Medium;
-  position: absolute;
-  right: 40%;
-  margin: 0 auto;
+  float: inline-start;
+  margin-top: 20px;
+  margin-bottom: auto;
+  padding-top: 1%;
 
 }
 
@@ -108,8 +108,8 @@ body{
   font-size: 1.4em;
   font-family: Franklin Gothic Medium;
   float: left;
+  padding: 2%;
   
-  padding-top: 10%;
   margin:0 auto;
   text-align: justify;
 
