--- a/css/first.css
+++ b/css/first.css
@@ -96,27 +96,38 @@ body{
 /*--------------------intro page------------------*/
 .intro_page p{
   color:white;
-  font-size: 4em;
+  font-size: 4vw;
   font-family:'Merriweather', serif;
   left: 0;
   right: 0;
   margin: 0 auto;
   
   position: absolute;
-  bottom: 50%;  
+  bottom: 52%;  
+}
+.intro_page h1{
+  color:white;
+  font-size: 2vw;
+  font-family:'Merriweather', serif;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  
+  position: absolute;
+  bottom: 47%; 
 }
 
-
+/*
 .para p{
   color: #04c2c9;
-  font-size: 2em;
+  font-size: 3em;
   font-family: Franklin Gothic Medium;
   left: 0;
   right: 0;
   margin: 0 auto;
   max-width: 600px;
   position: absolute;
-  bottom: 45%;
+  bottom: 20%;
 }
 /*
 .para p:hover{
